# mytabular

./: .gitignore  pyproject.toml  tox.ini
.circleci/: config.yml
mytabular/: main.py  util.py
mytabular.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mytabular/feature/: base.py  feature.py  test_atma4_feature.py  test_feature.py
mytabular/runner/: adversarial_validation.py  base.py  purchase_pca_groupkfold.py  purchase_pca_kfold.py  purchase_together_kfold.py  time_purchase_kfold.py
mytabular/util/: sheet.py
notebook/: 001_eda.ipynb  002_model.ipynb  003_model.ipynb
script/: upload_data.sh
tests/: test_mytabular.py
tests/mytabular/feature/: test_base.py
