[tool.poetry]
name = "mytabular"
version = "0.1.0"
description = ""
authors = ["cfiken <cfiken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "*"
jupyter = "*"
jupyterlab = "*"
numpy = "*"
matplotlib = "*"
pillow = "*"
seaborn = "*"
lightgbm = "*"
optuna = "*"
regex = "*"
pandas = "*"
fastprogress = "*"
mlflow = "^1.6.0"
feather-format = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
